--- a/index.html
+++ b/index.html
@@ -1,217 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
-</head>
-<body>
-  <!-- Header -->
-  <section id="header">
-    <div class="header container">
-      <div class="nav-bar">
-        <div class="brand">
-          <a href="#hero"><h1><span>C</span>ovid<span>-19</span> India</h1></a>
-        </div>
-        <div class="nav-list">
-          <div class="hamburger"><div class="bar"></div></div>
-          <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#services">Live Tracker</a></li>
-            <li><a href="hospitals.html">Hospitals</a></li>
-            <li><a href="#about">Precautions</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>My Website</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <section id="header">
+      <div class="header container">
+        <div class="nav-bar">
+          <div class="brand">
+            <a href="#hero"
+              ><h1><span>C</span>ovid<span>-19</span> India</h1></a
+            >
+          </div>
+          <div class="nav-list">
+            <div class="hamburger"><div class="bar"></div></div>
+            <ul>
+              <li><a href="#hero">Home</a></li>
+              <li><a href="./pages/hospital.html">Hospitals</a></li>
+              <li><a href="#live">Live Tracker</a></li>
+              <li><a href="./pages/prcs.html">Precautions</a></li>
+              <li><a href="./pages/contact.html">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- End Header -->
+    </section>
+    <!-- End Header -->
 
+    <!-- Hero Section  -->
+    <section id="hero">
+      <div class="hero container">
+        <div>
+          <h1>Covid-19 <span></span></h1>
+          <h1>Live <span></span></h1>
+          <h1>Latest info <span></span></h1>
+          <a href="#projects" type="button" class="cta">Learn more</a>
+        </div>
+      </div>
+    </section>
+    <!-- End Hero Section  -->
 
-  <!-- Hero Section  -->
-  <section id="hero">
-    <div class="hero container">
-      <div>
-        <h1>Covid-19 <span></span></h1>
-        <h1>Live <span></span></h1>
-        <h1>Latest info <span></span></h1>
-        <a href="#projects" type="button" class="cta">Learn more</a>
+    <!-- Service Section -->
+    <section id="services">
+      <div id="live" class="services container">
+        <div class="service-top">
+          <h1 class="section-title">Live<span> M</span>ap</h1>
+        </div>
+        <div id="map"></div>
+        <div>
+          <svg
+            height="35"
+            viewBox="0 0 64 64"
+            width="35"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="Hospital">
+              <ellipse cx="32" cy="56" fill="#ffcd00" rx="18" ry="5" />
+              <path
+                d="m53 24c0 7.8-9.5 20.03-15.72 27.21-3.03 3.49-5.28 5.79-5.28 5.79s-2.25-2.3-5.28-5.79c-6.22-7.18-15.72-19.41-15.72-27.21a21 21 0 0 1 42 0z"
+                fill="#006df0"
+              />
+              <circle cx="32" cy="24" fill="#d1e7f8" r="16" />
+              <path
+                d="m48 24a15.98 15.98 0 0 1 -26.735 11.839q-2.214 1.242-4.533 2.309a122.307 122.307 0 0 0 9.988 13.062c3.03 3.49 5.28 5.79 5.28 5.79s2.25-2.3 5.28-5.79c6.22-7.18 15.72-19.41 15.72-27.21a20.928 20.928 0 0 0 -6.073-14.765q-1.206 2.343-2.592 4.575a15.932 15.932 0 0 1 3.665 10.19z"
+                fill="#005ece"
+              />
+              <path
+                d="m48 24a15.932 15.932 0 0 0 -3.665-10.19 64.29 64.29 0 0 1 -23.07 22.029 15.98 15.98 0 0 0 26.735-11.839z"
+                fill="#b7cad9"
+              />
+              <path d="m42 21v6h-7v7h-6v-7h-7v-6h7v-7h6v7z" fill="#ed1c24" />
+              <g fill="#231f20">
+                <path
+                  d="m49 24a17 17 0 1 0 -17 17 17.019 17.019 0 0 0 17-17zm-32 0a15 15 0 1 1 15 15 15.017 15.017 0 0 1 -15-15z"
+                />
+                <path
+                  d="m39.29 50.418c6.26-7.391 14.71-18.78 14.71-26.418a22 22 0 0 0 -44 0c0 7.638 8.45 19.027 14.71 26.418-4.236.526-11.71 1.967-11.71 5.582 0 3.939 9.559 6 19 6s19-2.061 19-6c0-3.615-7.474-5.056-11.71-5.582zm-7.29-46.418a20.023 20.023 0 0 1 20 20c0 9.874-16.354 27.7-20 31.555-3.647-3.855-20-21.677-20-31.555a20.023 20.023 0 0 1 20-20zm0 56c-11 0-17-2.643-17-4 0-.945 3.33-2.977 11.293-3.742 2.7 3.094 4.732 5.176 4.993 5.442a1 1 0 0 0 1.428 0c.261-.266 2.29-2.348 4.993-5.442 7.963.765 11.293 2.797 11.293 3.742 0 1.357-6 4-17 4z"
+                />
+                <path
+                  d="m36 34v-6h6a1 1 0 0 0 1-1v-6a1 1 0 0 0 -1-1h-6v-6a1 1 0 0 0 -1-1h-6a1 1 0 0 0 -1 1v6h-6a1 1 0 0 0 -1 1v6a1 1 0 0 0 1 1h6v6a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1zm-2-7v6h-4v-6a1 1 0 0 0 -1-1h-6v-4h6a1 1 0 0 0 1-1v-6h4v6a1 1 0 0 0 1 1h6v4h-6a1 1 0 0 0 -1 1z"
+                />
+              </g>
+            </g>
+          </svg>
+          <span style="font-size: x-large;">Government</span>
+          <svg
+            height="35"
+            viewBox="0 0 64 64"
+            width="35"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="Hospital">
+              <ellipse cx="32" cy="56" fill="#ffcd00" rx="18" ry="5" />
+              <path
+                d="m53 24c0 7.8-9.5 20.03-15.72 27.21-3.03 3.49-5.28 5.79-5.28 5.79s-2.25-2.3-5.28-5.79c-6.22-7.18-15.72-19.41-15.72-27.21a21 21 0 0 1 42 0z"
+                fill="#f06d00"
+              />
+              <circle cx="32" cy="24" fill="#d1e7f8" r="16" />
+              <path
+                d="m48 24a15.98 15.98 0 0 1 -26.735 11.839q-2.214 1.242-4.533 2.309a122.307 122.307 0 0 0 9.988 13.062c3.03 3.49 5.28 5.79 5.28 5.79s2.25-2.3 5.28-5.79c6.22-7.18 15.72-19.41 15.72-27.21a20.928 20.928 0 0 0 -6.073-14.765q-1.206 2.343-2.592 4.575a15.932 15.932 0 0 1 3.665 10.19z"
+                fill="#ce5e00"
+              />
+              <path
+                d="m48 24a15.932 15.932 0 0 0 -3.665-10.19 64.29 64.29 0 0 1 -23.07 22.029 15.98 15.98 0 0 0 26.735-11.839z"
+                fill="#d9cab7"
+              />
+              <path d="m42 21v6h-7v7h-6v-7h-7v-6h7v-7h6v7z" fill="#ed1c24" />
+              <g fill="#231f20">
+                <path
+                  d="m49 24a17 17 0 1 0 -17 17 17.019 17.019 0 0 0 17-17zm-32 0a15 15 0 1 1 15 15 15.017 15.017 0 0 1 -15-15z"
+                />
+                <path
+                  d="m39.29 50.418c6.26-7.391 14.71-18.78 14.71-26.418a22 22 0 0 0 -44 0c0 7.638 8.45 19.027 14.71 26.418-4.236.526-11.71 1.967-11.71 5.582 0 3.939 9.559 6 19 6s19-2.061 19-6c0-3.615-7.474-5.056-11.71-5.582zm-7.29-46.418a20.023 20.023 0 0 1 20 20c0 9.874-16.354 27.7-20 31.555-3.647-3.855-20-21.677-20-31.555a20.023 20.023 0 0 1 20-20zm0 56c-11 0-17-2.643-17-4 0-.945 3.33-2.977 11.293-3.742 2.7 3.094 4.732 5.176 4.993 5.442a1 1 0 0 0 1.428 0c.261-.266 2.29-2.348 4.993-5.442 7.963.765 11.293 2.797 11.293 3.742 0 1.357-6 4-17 4z"
+                />
+                <path
+                  d="m36 34v-6h6a1 1 0 0 0 1-1v-6a1 1 0 0 0 -1-1h-6v-6a1 1 0 0 0 -1-1h-6a1 1 0 0 0 -1 1v6h-6a1 1 0 0 0 -1 1v6a1 1 0 0 0 1 1h6v6a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1zm-2-7v6h-4v-6a1 1 0 0 0 -1-1h-6v-4h6a1 1 0 0 0 1-1v-6h4v6a1 1 0 0 0 1 1h6v4h-6a1 1 0 0 0 -1 1z"
+                />
+              </g>
+            </g>
+          </svg>
+          <span style="font-size: x-large;">Private</span><br />
+          <br /><span style="font-size: medium; font-weight: bold;"
+            >Click Full Screen to get an Immersive Experience amd vacnat beds
+            count is diaplayed for Isolation hospitals</span
+          ><br /><span style="font-size: medium; font-weight: bolder;"
+            >Click on ICON to get more INFO</span
+          >
+        </div>
       </div>
-    </div>
-  </section>
-  <!-- End Hero Section  -->
+    </section>
+    <!-- End Service Section -->
 
-  <!-- Service Section -->
-  <section id="services">
-    <div class="services container">
-      <div class="service-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
-      </div>
-      <div class="service-bottom">
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Service Section -->
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
-      </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 3</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Projects Section -->
-
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
-        </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-      <div><h1 class="section-title">Contact <span>info</span></h1></div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
-          <div class="contact-info">
-            <h1>Phone</h1>
-            <h2>+1 234 123 1234</h2>
-            <h2>+1 234 123 1234</h2>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>info@gmail.com</h2>
-            <h2>abcd@gmail.com</h2>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
-          <div class="contact-info">
-            <h1>Address</h1>
-            <h2>Fatikchhari, Chittagong, Bangladesh</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
-
-  <!-- Footer -->
-  <section id="footer">
-    <div class="footer container">
-      <div class="brand"><h1><span>S</span>haif <span>A</span>rfan</h1></div>
-      <h2>Your Complete Web Solution</h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"/></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png"/></a>
-        </div>
-      </div>
-      <p>Copyright © 2020 Arfan. All rights reserved</p>
-    </div>
-  </section>
-  <!-- End Footer -->
-  <script src="./app.js"></script>
-</body>
+    <script src="./js/app.js"></script>
+    <script src="./js/hps.js"></script>
+    <script src="./js/map.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_sUXJgK7uQgUgfjQUQ7wX3GybJkGSUUY&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
+  </body>
 </html>
