--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="/css/hospital.css">
-  <title>My Website</title>
+  <link rel="stylesheet" href="https://nssk1999.github.io/covid19/css/hospital.css">
+  <title>Covid-19 Telangana</title>
 </head>
 <body>
   <!-- Header -->
