--- a/pages/prcs.html
+++ b/pages/prcs.html
@@ -128,8 +128,8 @@
       standalone
       title="Covid19 Precautions"
       publisher="Amitej And Koushik"
-      publisher-logo-src="virus.png"
-      poster-portrait-src="/assets/1.png"
+      publisher-logo-src="https://nssk1999.github.io/covid19/assets/virus.png"
+      poster-portrait-src="https://nssk1999.github.io/covid19/assets/1.png"
     >
       <amp-story-page id="cover">
         <amp-story-grid-layer template="fill"> </amp-story-grid-layer>
@@ -144,7 +144,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/1.png"
+            src="https://nssk1999.github.io/covid19/assets/1.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -158,7 +158,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/2.png"
+            src="https://nssk1999.github.io/covid19/assets/2.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -173,7 +173,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/3.png"
+            src="https://nssk1999.github.io/covid19/assets/3.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -187,7 +187,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/4.png"
+            src="https://nssk1999.github.io/covid19/assets/4.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -199,7 +199,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/5.png"
+            src="https://nssk1999.github.io/covid19/assets/5.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -211,7 +211,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/6.png"
+            src="https://nssk1999.github.io/covid19/assets/6.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -223,7 +223,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="/assets/7.png"
+            src="https://nssk1999.github.io/covid19/assets/7.png"
             width="1024"
             height="1024"
             layout="responsive"
