--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
               <li><a href="#hero">Home</a></li>
-              <li><a href="./pages/hospital.html">Hospitals</a></li>
+              <li><a href="./hospital.html">Hospitals</a></li>
               <li><a href="#live">Live Tracker</a></li>
-              <li><a href="./pages/prcs.html">Precautions</a></li>
-              <li><a href="./pages/contact.html">Contact</a></li>
+              <li><a href="./prcs.html">Precautions</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
