--- a/hospital.html
+++ b/hospital.html
@@ -18,11 +18,11 @@
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
           <ul>
-            <li><a href="/index.html#hero">Home</a></li>
-            <li><a href="/pages/hospital.html">Hospitals</a></li>
-            <li><a href="/index.html#live">Live Tracker</a></li>
-            <li><a href="/pages/prcs.html">Precautions</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="./index.html#hero">Home</a></li>
+            <li><a href="./hospital.html">Hospitals</a></li>
+            <li><a href="./index.html#live">Live Tracker</a></li>
+            <li><a href="./prcs.html">Precautions</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
