--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
         <div class="row">
           <button name="post" type="submit">Submit</button>
           <br />
-          <a style="text-align: center;" href="/index.html">Back to Home</a>
+          <a style="text-align: center;" href="./index.html">Back to Home</a>
         </div>
       </form>
     </div>
