--- a/amp_story.html
+++ b/amp_story.html
@@ -133,7 +133,7 @@
       title="Covid19 Precautions"
       publisher="Amitej And Koushik"
       publisher-logo-src="virus.png"
-      poster-portrait-src="/assets/1.png"
+      poster-portrait-src="./assets/1.png"
     >
       <amp-story-page id="cover">
         <amp-story-grid-layer template="fill"> </amp-story-grid-layer>
@@ -146,8 +146,8 @@
       <!-- Page 1 (Cat): 1 layer (vertical) -->
       <amp-story-page id="page1">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/1.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/1.png">
+          <amp-anim width="1024" height="1024" src="./assets/1.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/1.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
@@ -156,8 +156,8 @@
       <!-- Page 2 (Dog): 2 layers (fill + thirds) -->
       <amp-story-page id="page2">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/2.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/2.png">
+          <amp-anim width="1024" height="1024" src="./assets/2.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/2.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
@@ -167,8 +167,8 @@
       <amp-story-page id="page3">
         <!-- </amp-story-page> background-audio="assets/bird-singing.mp3"> -->
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/3.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/3.png">
+          <amp-anim width="1024" height="1024" src="./assets/3.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/3.png">
             </amp-img>
           </amp-anim>rid-layer>
       </amp-story-page>
@@ -176,32 +176,32 @@
       <!-- Page 4 (Rabbit): 3 layers (fill (video) + vertical + vertical) -->
       <amp-story-page id="page4">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/4.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/4.png">
+          <amp-anim width="1024" height="1024" src="./assets/4.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/4.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="page5">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/5.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/5.png">
+          <amp-anim width="1024" height="1024" src="./assets/5.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/5.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="page6">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/6.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/6.png">
+          <amp-anim width="1024" height="1024" src="./assets/6.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/6.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
       </amp-story-page>
       <amp-story-page id="page7">
         <amp-story-grid-layer template="fill">
-          <amp-anim width="1024" height="1024" src="/assets/7.gif">
-            <amp-img placeholder width="1024" height="1024" src="/assets/7.png">
+          <amp-anim width="1024" height="1024" src="./assets/7.gif">
+            <amp-img placeholder width="1024" height="1024" src="./assets/7.png">
             </amp-img>
           </amp-anim>
         </amp-story-grid-layer>
