--- a/amp_story.html
+++ b/amp_story.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
+    <link rel="shortcut icon" href="./assets/virus.png" type="image/png">
     <style amp-boilerplate>
       body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
