--- a/hospital.html
+++ b/hospital.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="./assets/virus.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://nssk1999.github.io/covid19/css/hospital.css">
+  <link rel="stylesheet" href="./css/hospital.css">
   <title>Covid-19 Telangana</title>
 </head>
 <body>
@@ -135,7 +136,7 @@
 </div>
 </div>
 
-  <script src="./js/hospital.js"></script>
+  <script src="/js/hospital.js"></script>
   
   
   
