--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./assets/virus.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Covid-19 Telangana</title>
@@ -38,7 +39,7 @@
           <h1>Covid-19 <span></span></h1>
           <h1>Live <span></span></h1>
           <h1>Latest info <span></span></h1>
-          <a href="#projects" type="button" class="cta">Learn more</a>
+          <a href="#./amp_story.html" type="button" class="cta">Learn more</a>
         </div>
       </div>
     </section>
@@ -125,7 +126,7 @@
           </svg>
           <span style="font-size: x-large;">Private</span><br />
           <br /><span style="font-size: medium; font-weight: bold;"
-            >Click Full Screen to get an Immersive Experience amd vacnat beds
+            >Click Full Screen to get an Immersive Experience amd vacant beds
             count is diaplayed for Isolation hospitals</span
           ><br /><span style="font-size: medium; font-weight: bolder;"
             >Click on ICON to get more INFO</span
