--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Contact Us</title>
+    <link rel="shortcut icon" href="./assets/virus.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       @import "https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap";
