--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h1>Covid-19 <span></span></h1>
           <h1>Live <span></span></h1>
           <h1>Latest info <span></span></h1>
-          <a href="#./amp_story.html" type="button" class="cta">Learn more</a>
+          <a href="./amp_story.html" type="button" class="cta">Learn more</a>
         </div>
       </div>
     </section>
