--- a/hospital.html
+++ b/hospital.html
@@ -35,11 +35,11 @@
 <section id="hero">
     <div class="hero container">
       <div>
-        <h5>Covid-19 <span></span></h1>
-        <h5>Live <span></span></h1>
-        <h5>Latest info <span></span></h1><br><br>
-        <h5 style="text-align: center;">Hospital Info</h2> 
-        <a href="#w3-container" type="button" class="cta">Click here</a>
+        <h5>We are <span></span></h1>
+        <h5>here <span></span></h1>
+        <h5>For you <span></span></h1><br><br>
+<!--         <h5 style="text-align: center;">Hospital Info</h2>  -->
+<!--         <a href="#w3-container" type="button" class="cta">Click here</a> -->
       </div>
     </div>
   </section>
