--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
       </form>
     </div>
     <div class="down">
-      <img src="/assets/test.jpg" />
+      <img src="./assets/test.jpg" />
     </div>
     <script type="text/javascript">
       function show() {
