--- a/hospital.html
+++ b/hospital.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="./assets/virus.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="./css/hospital.css">
-  <title>Covid-19 Telangana</title>
+  <title>My Website</title>
 </head>
 <body>
   <!-- Header -->
@@ -19,11 +18,11 @@
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
           <ul>
-            <li><a href="./index.html#hero">Home</a></li>
-            <li><a href="./hospital.html">Hospitals</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="./index.html#live">Live Tracker</a></li>
-            <li><a href="./prcs.html">Precautions</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="hospital.html">Hospitals</a></li>
+            <li><a href="#about">Precautions</a></li>
+            <li><a href="tests.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -35,17 +34,17 @@
 <section id="hero">
     <div class="hero container">
       <div>
-        <h5>We are <span></span></h1>
-        <h5>here <span></span></h1>
-        <h5>For you <span></span></h1><br><br>
-<!--         <h5 style="text-align: center;">Hospital Info</h2>  -->
-<!--         <a href="#w3-container" type="button" class="cta">Click here</a> -->
+        <h5>We are here for you <span></span></h1>
+        <h5>Please <span></span></h1>
+        <h5>Stay at home for US<span></span></h1><br><br>
+        <h5 align="center">Hospital Info</h2> 
+        <a href="#w3-container" type="button" class="cta">Click here</a>
       </div>
     </div>
   </section>
 
 <div class="w3-container" id=w3-container>
-  <h2 style="text-align: center;">Hospital in Nearby Areas</h2>
+  <h2 align="center">Hospital in Nearby Areas</h2>
   <div class="w3-responsive">
 
   <table class="w3-table-all w3-hoverable">
@@ -57,78 +56,77 @@
         <th>Contact No.</th>
       </tr>
     </thead>
-    <tbody id="h-data">
-      <tr data-href="index.html">
-        <td>Gandhi Hospital</td>
-        <td>Secuderabad,Telangana</td>
-        <td>1068</td>
-        <td>989245897</td>
-      </tr>
-      <tr data-href="">
-        <td>NIMS Hospital</td>
-        <td>Punjagutta,Hyderabad</td>
-        <td>1400</td>
-        <td>654574545</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>Telanagan Institude of Medical Sciences</td>
-        <td>Gachibowli,Hyderabad</td>
-        <td>1500</td>
-        <td>244252585</td>
-      </tr>
-  
-      <tr data-href="https://www.google.com">
-        <td>Fever Hospital</td>
-        <td>Nallakunta,Hyderabad</td>
-        <td>700</td>
-        <td>040 2766 7844</td>
-      </tr>
-  
-      <tr data-href="https://www.google.com">
-        <td>Government Chest and general Hospital</td>
-        <td>Hyderabad</td>
-        <td>40</td>
-        <td>040 2381 4422</td>
-      </tr>
-  
-      <tr data-href="https://www.google.com">
-        <td>Care Hospitals</td>
-        <td>Banjara Hills,Hyderabad</td>
-        <td>200</td>
-        <td>040 2415 354</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>Continental Hospital</td>
-        <td>Gachibowli,Hyderabad</td>
-        <td>60</td>
-        <td>040 2457 4222</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>Yashoda Hospital</td>
-        <td>Somajiguda,Hyderabad</td>
-        <td>100</td>
-        <td>040 2341 4000</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>KIMS Hospital</td>
-        <td>Secunderabad</td>
-        <td>33</td>
-        <td>040 245 2445</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>Sunshine Hospitals</td>
-        <td>Secuderabad</td>
-        <td>90</td>
-        <td>040 2324 4424</td>
-      </tr>
-      <tr data-href="https://www.google.com">
-        <td>Sai Sanjeevani Hospital</td>
-        <td>Kothapet,Hyderabad</td>
-        <td>40</td>
-        <td>040 2145 3447</td>
-      </tr>
-  
-    </tbody>
+    <tbody id="h-data"></tbody>
+    <tr data-href="index.html">
+      <td>Gandhi Hospital</td>
+      <td>Secuderabad,Telangana</td>
+      <td>1068</td>
+      <td>989245897</td>
+    </tr>
+    <tr data-href="">
+      <td>NIMS Hospital</td>
+      <td>Punjagutta,Hyderabad</td>
+      <td>1400</td>
+      <td>654574545</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>Telanagan Institude of Medical Sciences</td>
+      <td>Gachibowli,Hyderabad</td>
+      <td>1500</td>
+      <td>244252585</td>
+    </tr>
+
+    <tr data-href="https://www.google.com">
+      <td>Fever Hospital</td>
+      <td>Nallakunta,Hyderabad</td>
+      <td>700</td>
+      <td>040 2766 7844</td>
+    </tr>
+
+    <tr data-href="https://www.google.com">
+      <td>Government Chest and general Hospital</td>
+      <td>Hyderabad</td>
+      <td>40</td>
+      <td>040 2381 4422</td>
+    </tr>
+
+    <tr data-href="https://www.google.com">
+      <td>Care Hospitals</td>
+      <td>Banjara Hills,Hyderabad</td>
+      <td>200</td>
+      <td>040 2415 354</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>Continental Hospital</td>
+      <td>Gachibowli,Hyderabad</td>
+      <td>60</td>
+      <td>040 2457 4222</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>Yashoda Hospital</td>
+      <td>Somajiguda,Hyderabad</td>
+      <td>100</td>
+      <td>040 2341 4000</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>KIMS Hospital</td>
+      <td>Secunderabad</td>
+      <td>33</td>
+      <td>040 245 2445</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>Sunshine Hospitals</td>
+      <td>Secuderabad</td>
+      <td>90</td>
+      <td>040 2324 4424</td>
+    </tr>
+    <tr data-href="https://www.google.com">
+      <td>Sai Sanjeevani Hospital</td>
+      <td>Kothapet,Hyderabad</td>
+      <td>40</td>
+      <td>040 2145 3447</td>
+    </tr>
+
 
 
 
