--- a/hospital.html
+++ b/hospital.html
@@ -20,9 +20,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="./index.html#live">Live Tracker</a></li>
-            <li><a href="hospital.html">Hospitals</a></li>
-            <li><a href="#about">Precautions</a></li>
-            <li><a href="tests.html">Contact</a></li>
+            <li><a href="./hospital.html">Hospitals</a></li>
+            <li><a href="./prcs.html">Precautions</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
