--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="shortcut icon" href="./assets/virus.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Covid-19 Telangana</title>
+    <link rel="manifest" href="./manifest.json" />
+    <title>My Website</title>
   </head>
   <body>
     <!-- Header -->
@@ -21,10 +22,10 @@
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
               <li><a href="#hero">Home</a></li>
-              <li><a href="./hospital.html">Hospitals</a></li>
+              <li><a href="./pages/hospital.html">Hospitals</a></li>
               <li><a href="#live">Live Tracker</a></li>
-              <li><a href="./prcs.html">Precautions</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./pages/prcs.html">Precautions</a></li>
+              <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -39,7 +40,9 @@
           <h1>Covid-19 <span></span></h1>
           <h1>Live <span></span></h1>
           <h1>Latest info <span></span></h1>
-          <a href="./hospital.html" type="button" class="cta">Learn more</a>
+          <a href="/pages/amp_story.html" type="button" class="cta"
+            >Learn more</a
+          >
         </div>
       </div>
     </section>
@@ -126,7 +129,7 @@
           </svg>
           <span style="font-size: x-large;">Private</span><br />
           <br /><span style="font-size: medium; font-weight: bold;"
-            >Click Full Screen to get an Immersive Experience amd vacant beds
+            >Click Full Screen to get an Immersive Experience amd vacnat beds
             count is diaplayed for Isolation hospitals</span
           ><br /><span style="font-size: medium; font-weight: bolder;"
             >Click on ICON to get more INFO</span
