--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="./css/hospital.css">
+  <link rel="stylesheet" href="../css/hospital.css">
   <title>My Website</title>
 </head>
 <body>
@@ -18,11 +18,11 @@
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="./index.html#live">Live Tracker</a></li>
-            <li><a href="hospital.html">Hospitals</a></li>
-            <li><a href="#about">Precautions</a></li>
-            <li><a href="tests.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./hospital.html">Hospitals</a></li>
+            <li><a href="../index.html#live">Live Tracker</a></li>
+            <li><a href="./prcs.html">Precautions</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -134,7 +134,7 @@
 </div>
 </div>
 
-  <script src="./js/hospital.js"></script>
+  <script src="../js/hospital.js"></script>
   
   
   
