--- a/pages/prcs.html
+++ b/pages/prcs.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
-    <link rel="shortcut icon" href="./assets/virus.png" type="image/png" />
+    <link rel="shortcut icon" href="../assets/virus.png" type="image/png" />
     <style amp-boilerplate>
       body {
         -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -130,7 +130,7 @@
       title="Covid19 Precautions"
       publisher="Amitej And Koushik"
       publisher-logo-src="virus.png"
-      poster-portrait-src="./assets/1.png"
+      poster-portrait-src="../assets/1.png"
     >
       <amp-story-page id="cover">
         <amp-story-grid-layer template="fill"> </amp-story-grid-layer>
@@ -145,7 +145,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/1.png"
+            src="../assets/1.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -159,7 +159,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/2.png"
+            src="../assets/2.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -174,7 +174,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/3.png"
+            src="../assets/3.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -188,7 +188,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/4.png"
+            src="../assets/4.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -200,7 +200,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/5.png"
+            src="../assets/5.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -212,7 +212,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/6.png"
+            src="../assets/6.png"
             width="1024"
             height="1024"
             layout="responsive"
@@ -224,7 +224,7 @@
         <amp-story-grid-layer template="fill">
           <amp-img
             alt="A view of the sea"
-            src="./assets/7.png"
+            src="../assets/7.png"
             width="1024"
             height="1024"
             layout="responsive"
