--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Contact Us</title>
-    <link rel="shortcut icon" href="./assets/virus.png" type="image/png" />
+    <link rel="shortcut icon" href="../assets/virus.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       @import "https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap";
@@ -221,7 +221,7 @@
       </form>
     </div>
     <div class="down">
-      <img src="./assets/test.jpg" />
+      <img src="../assets/test.jpg" />
     </div>
     <script type="text/javascript">
       function show() {
